# empc

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  defaults.cfg  docker-compose.yml  empc.cpp  make_build.sh
azure-pipelines/: azure-pipeline.yml  configure_Linux.sh  configure_Windows.sh  configure_linux.sh  configure_macOS.sh  configure_windows.sh
cmake/: coverage.cmake
docker/: sourceryg++-2016.11-64-ia16-elf-x86_64-linux-gnu.tar.bz2  symlink-sourcery.py
src/: CMakeLists.txt  Makefile  empc.cpp
src/cpu/: cpu.cpp  cpu.h  registers.cpp  registers.h
src/empc/: debug.cpp  debug.h  empc.cpp  empc.h  empc_main.cpp  empc_util.cpp  empc_util.h
src/empc/base/: types.cpp  types.h
src/empc/cpu/: cpu.cpp  cpu.h  cpu.imp.h  cpu.jmp.hpp  cpu.mov.hpp  cpu_state.h  data_registers.cpp  data_registers.h  instruction.h  instruction_pointer.h  modrm.h  modrm_instruction.h  pointer_and_index_registers.cpp  pointer_and_index_registers.h  registers.cpp  registers.h  segment_registers.cpp  segment_registers.h
src/empc/cpu/imp/: instruction.h  modrm_instruction.h
src/empc/cpu/instructions/: hlt.h  instruction.h  jmp.h  mov.h  nop.h  register_accessor.h
src/empc/memory/: memory.cpp  memory.h  memory.imp.h  memory_buffer.cpp  memory_buffer.h  memory_buffer.imp.h
tests/: CMakeLists.txt  Makefile  build_simple.sh  empc_tests.cpp  test_instructions.cpp  test_instructions.py  test_mov.asm  test_simple.cpp  test_simple.py
tests/base/: types_tests.cpp
tests/cpu/: test_imp_instructions.cpp  test_modrm.cpp  test_registers.cpp
tests/memory/: memory_buffer_tests.cpp
tests/shelved/comparing_real_with_emulated/: test_simple.cpp
